--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,47 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Trang chủ</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-            integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-            crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-            integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-            crossorigin="anonymous"></script>
-    <link rel="icon" href="https://static.thenounproject.com/png/1180247-200.png">
-    <link rel="stylesheet" type="text/css" media="screen" href="../static/style.css">
-    <script type="text/javascript" src="../static/script.js"></script>
-</head>
-<body>
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="javascript:void(0)">BÁN HÀNG ĐIỆN TỬ</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="mynavbar">
-            <ul class="navbar-nav me-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="/">Trang chủ</a>
-                </li>
-                {% for c in categories %}
-                <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0)">{{ c.name }}</a>
-                </li>
-                {% endfor %}
-            </ul>
-            <form class="d-flex" action="/" method="get">
-                <label class="me-1">
-                    <input class="form-control me-2" placeholder="Search..." type="text" name="kw">
-                </label>
-                <button class="btn btn-primary" type="submit">Search</button>
-            </form>
-        </div>
-    </div>
-</nav>
+{% extends 'layout/base.html' %}
+
+{% block content %}
+
 <section class="container">
     <div class="row">
         {% for p in products %}
@@ -59,12 +19,5 @@
         {% endfor %}
     </div>
 </section>
-<footer class="mt-4 p-5 bg-primary text-white rounded">
-    <h1>Nguyễn Hà Bảo Khang</h1>
-    <p>&copy;2023</p>
-</footer>
-<div onclick="scrollToTop()" role="button" id="return" title="Trở về đầu trang">
-    <button type="button">^</button>
-</div>
-</body>
-</html>
+
+{% endblock %}
