--- a/app/templates/layout/footer.html
+++ b/app/templates/layout/footer.html
@@ -2,3 +2,6 @@
     <h1>Nguyễn Hà Bảo Khang</h1>
     <p>&copy;2023</p>
 </footer>
+<div onclick="scrollToTop()" role="button" id="return" title="Trở về đầu trang">
+    <button type="button">^</button>
+</div>
