--- a/app/templates/layout/base.html
+++ b/app/templates/layout/base.html
@@ -3,18 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Trang chủ</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-            integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-            crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-            integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-            crossorigin="anonymous"></script>
     <link rel="icon" href="https://static.thenounproject.com/png/1180247-200.png">
-    <link rel="stylesheet" type="text/css" media="screen" href="../static/style.css">
-    <script type="text/javascript" src="../static/script.js"></script>
-    <script src="https://kit.fontawesome.com/76334962e6.js" crossorigin="anonymous"></script>
+    {% include 'headtag.html' %}
 </head>
 <body>
 
@@ -25,8 +15,5 @@
 
 {% include 'layout/footer.html' %}
 
-<div onclick="scrollToTop()" role="button" id="return" title="Trở về đầu trang">
-    <button type="button">^</button>
-</div>
 </body>
 </html>
