--- a/app/templates/layout/footer.html
+++ b/app/templates/layout/footer.html
@@ -1,6 +1,53 @@
 <footer class="mt-4 p-5 bg-primary text-white rounded">
-    <h1>Nguyễn Hà Bảo Khang</h1>
-    <p>&copy;2023</p>
+    <div class="container">
+        <h1>Nguyễn Hà Bảo Khang</h1>
+        <div class="container mt-4">
+            <div style="justify-content: space-evenly" class="d-flex flex-wrap">
+                <div class="content contactus me-5">
+                    <h3>Liên hệ</h3>
+                    <ul style="list-style-type: square">
+                        <li>CÔNG TY TNHH 1 THÀNH VIÊN NHBK</li>
+                        <li>Trụ sở: 11/3/8, Huỳnh Châu Sổ, Bến Lức, Long An</li>
+                        <li>Tổng đài tư vấn mua hàng: <b>0764150623</b></li>
+                        <li>Tổng đài dịch vụ vận chuyển: <b>0964562759</b></li>
+                        <li>Email: <a href="mailto:nhbkhang12@gmail.com">nhbkhang12@gmail.com</a></li>
+                    </ul>
+                </div>
+                <div class="content about me-5">
+                    <h3>Theo dõi chúng tôi</h3>
+                    <ul style="list-style-type: disc" class="social-icon">
+                        <li><a href="https://www.facebook.com/profile.php?id=100012165398049"><i class="fa-brands fa-facebook"></i>Facebook</a></li>
+                        <li><a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i>Twitter</a></li>
+                        <li><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i>Instagram</a>
+                        </li>
+                        <li><a href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i>Youtube</a></li>
+                    </ul>
+                </div>
+                <div class="content links me-5">
+                    <h3>Đường Dẫn</h3>
+                    <ul class="link">
+                        <li><a href="/">Trang Chủ</a></li>
+                        <li><a href="">Về Chúng Tôi</a></li>
+                        <li><a href="">Thông Tin Liên Lạc</a></li>
+                        <li><a href="">Dịch Vụ</a></li>
+                        <li><a href="">Điều Kiện Chính Sách</a></li>
+                    </ul>
+                </div>
+                <div class="content help me-5">
+                    <h3>Trợ giúp</h3>
+                    <ul class="link">
+                        <li><a href="">Trung tâm trợ giúp</a></li>
+                        <li><a href="">Hình thức thanh toán</a></li>
+                        <li><a href="">Hướng dẫn đăng nhập</a></li>
+                        <li><a href="">Quy định sử dụng </a></li>
+                        <li><a href="">Chính sách bảo mật</a></li>
+                        <li><a href="">Liên hệ</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <p>&copy;2023</p>
+    </div>
 </footer>
 <div onclick="scrollToTop()" role="button" id="return" title="Trở về đầu trang">
     <button type="button">^</button>
