--- a/app/templates/admin/login.html
+++ b/app/templates/admin/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
-    {% include 'headtag.html' %}
+    {% include 'layout/headtag.html' %}
 </head>
 <body>
 <div class="container">
