--- a/app/templates/layout/base.html
+++ b/app/templates/layout/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Trang chủ</title>
     <link rel="icon" href="https://static.thenounproject.com/png/1180247-200.png">
-    {% include 'headtag.html' %}
+    {% include 'layout/headtag.html' %}
 </head>
 <body>
 
