--- a/app/static/style.css
+++ b/app/static/style.css
@@ -10,21 +10,17 @@ a{
 .social-icon li a i{
     margin-right: .5rem;
 }
-footer .container a:hover > .fa-brands.fa-facebook
-{
+footer .container a:hover > .fa-brands.fa-facebook {
     color:#385898;
     background: radial-gradient(circle at center,  #faf9f9 10%,#faf9f9 64%,#faf9f9 47%,rgba(27,27,27,1.00) 47%,rgba(27,27,27,1.00) 48%);
 }
-footer .container a:hover > .fa-brands.fa-twitter
-{
+footer .container a:hover > .fa-brands.fa-twitter {
     color:#1DA1F2;
 }
-footer .container a:hover > .fa-brands.fa-instagram
-{
+footer .container a:hover > .fa-brands.fa-instagram {
     background:linear-gradient(45deg, #405de6, #5851db, #833ab4, #c13584, #e1306c, #fd1d1d);
 }
-footer .container a:hover > .fa-brands.fa-youtube
-{
+footer .container a:hover > .fa-brands.fa-youtube {
     color:red;
     background: radial-gradient(ellipse at center,  #faf9f9 0%,#faf9f9 47%,#faf9f9 47%,rgba(27,27,27,1.00) 47%,rgba(27,27,27,1.00) 48%);
 }
@@ -52,4 +48,8 @@ footer .container a:hover > .fa-brands.fa-youtube
 #return>button:hover {
     background-color: rgb(205, 220, 220);
     color: dodgerblue;
+}
+/*bs5 class*/
+.dropdown-item:hover{
+    background: black;
 }
