--- a/app/templates/layout/headtag.html
+++ b/app/templates/layout/headtag.html
@@ -6,6 +6,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
-<link rel="stylesheet" type="text/css" media="screen" href="../static/style.css">
-<script type="text/javascript" src="../static/script.js"></script>
+<link rel="stylesheet" type="text/css" media="screen" href="../../static/style.css">
+<script type="text/javascript" src="../../static/script.js"></script>
 <script src="https://kit.fontawesome.com/76334962e6.js" crossorigin="anonymous"></script>
