--- a/app/templates/layout/footer.html
+++ b/app/templates/layout/footer.html
@@ -20,7 +20,7 @@
                         <li><a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i>Twitter</a></li>
                         <li><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i>Instagram</a>
                         </li>
-                        <li><a href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i>Youtube</a></li>
+                        <li><a href="https://www.youtube.com/channel/UC03PzhtkHs8hEF4kPBpyExQ"><i class="fa-brands fa-youtube"></i>Youtube</a></li>
                     </ul>
                 </div>
                 <div class="content links me-5">
