--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -53,3 +53,7 @@ footer .container a:hover > .fa-brands.fa-youtube {
 .dropdown-item:hover{
     background: black;
 }
+
+.bg-header {
+    background: rgb(50, 50, 50);
+}
