--- a/app/templates/layout/header.html
+++ b/app/templates/layout/header.html
@@ -1,26 +1,50 @@
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+<nav class="navbar navbar-expand-sm navbar-dark bg-header">
     <div class="container-fluid">
-        <a class="navbar-brand" href="javascript:void(0)">BÁN HÀNG ĐIỆN TỬ</a>
+        <a class="navbar-brand" href="/">
+            <img width="35" class="me-1" src="https://static.thenounproject.com/png/1180247-200.png">
+            BÁN HÀNG ĐIỆN TỬ</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="mynavbar">
             <ul class="navbar-nav me-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="/">Trang chủ</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown">Thể loại</a>
+                    <ul class="dropdown-menu bg-dark">
+                        {% for c in categories %}
+                            <li><a class="dropdown-item text-white" href="/?cate_id={{ c.id }}">{{ c.name }}</a></li>
+                        {% endfor %}
+                    </ul>
                 </li>
-                {% for c in categories %}
-                <li class="nav-item">
-                    <a class="nav-link" href="/?cate_id={{c.id}}">{{ c.name }}</a>
-                </li>
-                {% endfor %}
             </ul>
-            <form class="d-flex" action="/" method="get">
-                <label class="me-1">
-                    <input class="form-control me-2" placeholder="Search..." type="text" name="kw">
-                </label>
-                <button class="btn btn-primary" type="submit">Search</button>
-            </form>
+            <div class="d-inline-flex">
+                <form class="d-flex" action="/" method="get">
+                    <label class="me-1">
+                        <input class="form-control me-2" placeholder="Search..." type="text" name="kw">
+                    </label>
+                    <button class="btn btn-primary" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+                </form>
+                {% if current_user.is_authenticated %}
+                    <div class="dropdown bg-dark">
+                        <button type="button" class="btn btn-dark dropdown-toggle ms-1" data-bs-toggle="dropdown">
+                            <img title="Hồ sơ" class="avatar-img" alt="avatar"
+                                 src="{{ url_for('static', filename='img/' + current_user.avatar) }}">
+                        </button>
+                        <ul class="dropdown-menu dropdown-menu-end">
+                            <li>
+                                <a class="dropdown-item" href="/my_orders">Đơn hàng của tôi</a>
+                            </li>
+                            <li class="dropdown-divider"></li>
+                            <li>
+                                <a class="dropdown-item" href="/logout">Đăng xuất</a>
+                            </li>
+                        </ul>
+                    </div>
+                {% else %}
+                    <a title="Đăng nhập" href="/login" class="btn btn-primary icon ms-2 me-2">
+                        <i class="fa-solid fa-user"></i></a>
+                {% endif %}
+            </div>
         </div>
     </div>
 </nav>
