--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,38 +3,89 @@
 {% block content %}
 
     <section class="container mt-5 mb-5">
+        <!-- Carousel -->
+        <div id="demo" class="carousel slide mb-5" data-bs-ride="carousel">
 
-        {% if products %}
-            <div class="row">
-                {% for p in products %}
-                    <div class="card col-xs-12 col-md-3 mt-1">
-                        <div class="h-100">
-                            <img class="card-img-top mt-2" src="{{ p.image }}" alt="Card image">
-                        </div>
-                        <div class="card-body">
-                            <h4 class="card-title">{{ p.name }}</h4>
-                        </div>
-                        <div class="d-flex justify-content-around card-footer pe-0 ps-0">
-                            <a href="/products/{{ p.id }}" class="btn btn-primary p-2">Chi Tiết</a>
-                            <a href="#" class="btn btn-danger p-2 ">Đặt hàng</a>
-                        </div>
+            <!-- Indicators/dots -->
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+                <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+                <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+            </div>
+
+            <!-- The slideshow/carousel -->
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="https://cdn-uploads.gameblog.fr/img/news/419501_6412f28d2c3e0.jpg"
+                         alt="Iphone 15" class="d-block" style="width:100%">
+                    <div class="carousel-caption">
+                        <h3>Iphone 15</h3>
+                        <p>iPhone 15 Pro Max 256GB</p>
                     </div>
-                {% endfor %}
-            </div>
-            <br>
-            <div class="d-flex align-items-center justify-content-center">
-                <ul class="pagination mt-1">
-                    {% for i in range(pages) %}
-                        <li class="page-item"><a class="page-link"
-                                                 href="/?page={{ i + 1 }}&cate_id={{ cate_id }}&kw={{ kw }}">{{ i + 1 }}</a>
-                        </li>
-                    {% endfor %}
-                </ul>
+                </div>
+                <div class="carousel-item">
+                    <img src="https://tse4.mm.bing.net/th?id=OIP.Hida3iwQwd6O8UlU77jYywHaEN&pid=Api&P=0&h=180"
+                         alt="Galaxy fold" class="d-block" style="width:100%">
+                    <div class="carousel-caption">
+                        <h3>Galaxy Fold</h3>
+                        <p>Samsung Galaxy Z Fold3 5G 256GB</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="https://cdn.tgdd.vn/Files/2022/05/18/1433390/ipad-gen-9-co-may-mau-thumb-nail-2.jpg"
+                         alt="iPad 9" class="d-block" style="width:100%">
+                    <div class="carousel-caption">
+                        <h3>iPad 9</h3>
+                        <p>Máy tính bảng iPad 9 WiFi 64GB</p>
+                    </div>
+                </div>
             </div>
 
-        {% else %}
-            <p class="alert alert-info mt-2">KHÔNG có sản phẩm nào!!!</p>
-        {% endif %}
+            <!-- Left and right controls/icons -->
+            <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </button>
+        </div>
+
+
+        <div style="background: whitesmoke">
+            <h4 class="bg-primary p-1"><span class="m-2 text-white">Mới nhất</span></h4>
+            {% if products %}
+                <div class="row">
+                    {% for p in products %}
+                        <div class="card col-xs-12 col-md-3 mt-1">
+                            <div class="h-100">
+                                <img class="card-img-top mt-2" src="{{ p.image }}" alt="Card image">
+                            </div>
+                            <div class="card-body">
+                                <h4 class="card-title">{{ p.name }}</h4>
+                            </div>
+                            <div class="d-flex justify-content-around card-footer pe-0 ps-0">
+                                <a href="/products/{{ p.id }}" class="btn btn-primary p-2">Chi Tiết</a>
+                                <a href="#" class="btn btn-danger p-2"
+                                   onclick="addToCart({{ p.id }}, '{{ p.name }}', {{ p.price }})">Đặt hàng</a>
+                            </div>
+                        </div>
+                    {% endfor %}
+                </div>
+                <br>
+                <div class="d-flex align-items-center justify-content-center">
+                    <ul class="pagination mt-1">
+                        {% for i in range(pages) %}
+                            <li class="page-item"><a class="page-link"
+                                                     href="/?page={{ i + 1 }}&cate_id={{ cate_id }}&kw={{ kw }}">{{ i + 1 }}</a>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                </div>
+
+            {% else %}
+                <p class="alert alert-info mt-2">KHÔNG có sản phẩm nào!!!</p>
+            {% endif %}
+        </div>
 
     </section>
 
