--- a/app/templates/layout/header.html
+++ b/app/templates/layout/header.html
@@ -16,6 +16,10 @@
                         {% endfor %}
                     </ul>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link text-danger" href="/cart">Giỏ hàng &#128722; <span
+                            class="badge bg-danger cart-counter">{{ cart.total_quantity }}</span></a>
+                </li>
             </ul>
             <div class="d-inline-flex">
                 <form class="d-flex" action="/" method="get">
@@ -26,15 +30,12 @@
                 </form>
                 {% if current_user.is_authenticated %}
                     <div class="dropdown bg-dark">
-                        <button type="button" class="btn btn-dark dropdown-toggle ms-1" data-bs-toggle="dropdown">
-                            <img title="Hồ sơ" class="avatar-img" alt="avatar"
-                                 src="{{ url_for('static', filename='img/' + current_user.avatar) }}">
+                        <button type="button" class="btn btn-dark dropdown-toggle ms-1 p-1" data-bs-toggle="dropdown"
+                                style="max-height: 35px">
+                            <img title="Hồ sơ" class="avatar-img rounded-circle" alt="avatar" height="30"
+                                 src="{{ current_user.avatar }}">
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end">
-                            <li>
-                                <a class="dropdown-item" href="/my_orders">Đơn hàng của tôi</a>
-                            </li>
-                            <li class="dropdown-divider"></li>
                             <li>
                                 <a class="dropdown-item" href="/logout">Đăng xuất</a>
                             </li>
