--- a/app/templates/layout/headtag.html
+++ b/app/templates/layout/headtag.html
@@ -9,3 +9,4 @@
 <link rel="stylesheet" type="text/css" media="screen" href="../../static/css/style.css">
 <script type="text/javascript" src="../../static/js/script.js"></script>
 <script src="https://kit.fontawesome.com/76334962e6.js" crossorigin="anonymous"></script>
+<script type="text/javascript" src="../../static/js/cart.js"></script>
