--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -36,42 +36,51 @@
                                     <div class="d-flex flex-row align-items-center mb-4">
                                         <i class="fas fa-signature fa-lg me-3 fa-fw"></i>
                                         <div class="form-outline flex-fill mb-0">
-                                            <input type="text" id="" class="form-control" required/>
-                                            <label class="form-label" for="form3Example1c">Họ tên</label>
+                                            <input type="text" id="name" name="name" class="form-control" required/>
+                                            <label class="form-label" for="name">Họ tên</label>
                                         </div>
                                     </div>
 
                                     <div class="d-flex flex-row align-items-center mb-4">
                                         <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                                         <div class="form-outline flex-fill mb-0">
-                                            <input type="text" id="" class="form-control" required/>
-                                            <label class="form-label" for="">Tên tài khoản</label>
+                                            <input type="text" id="username" name="username" class="form-control"
+                                                   required/>
+                                            <label class="form-label" for="username">Tên tài khoản</label>
                                         </div>
                                     </div>
 
                                     <div class="d-flex flex-row align-items-center mb-4">
                                         <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                                         <div class="form-outline flex-fill mb-0">
-                                            <input type="email" id="" class="form-control" required/>
-                                            <label class="form-label" for="">Email</label>
+                                            <input type="email" id="email" name="email" class="form-control" required/>
+                                            <label class="form-label" for="email">Email</label>
                                         </div>
                                     </div>
 
                                     <div class="d-flex flex-row align-items-center mb-4">
                                         <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                                         <div class="form-outline flex-fill mb-0">
-                                            <input type="password" id="" class="form-control" required/>
-                                            <label class="form-label" for="">Mật khẩu</label>
+                                            <input type="password" id="password" name="password" class="form-control"
+                                                   required/>
+                                            <label class="form-label" for="password">Mật khẩu</label>
                                         </div>
                                     </div>
 
                                     <div class="d-flex flex-row align-items-center mb-4">
                                         <i class="fas fa-key fa-lg me-3 fa-fw"></i>
                                         <div class="form-outline flex-fill mb-0">
-                                            <input type="password" id="" class="form-control" required/>
-                                            <label class="form-label" for="">Nhập lại mật </label>
+                                            <input type="password" id="confirm" name="confirm" class="form-control"
+                                                   required/>
+                                            <label class="form-label" for="confirm">Nhập lại mật khẩu</label>
                                         </div>
                                     </div>
+
+                                    {% if err_msg %}
+                                    <div class="alert alert-danger">
+                                        {{ err_msg }}
+                                    </div>
+                                    {% endif %}
 
                                     <div class="form-check d-flex justify-content-center mb-5">
                                         <input class="form-check-input me-2" type="checkbox" value="" required/>
